fix(cors): explicitly handle Vercel OPTIONS pre-flight headers