@@ -4,16 +4,13 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -21,16 +18,16 @@ import java.util.List;
 public class SecurityConfig {
 
     @Value("${FRONTEND_URL:http://localhost:5173}")
-    private String frontendUrl;
+    private String frontendUrlFallback;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults()) // Uses the CorsConfigurationSource bean below
-                .csrf(AbstractHttpConfigurer::disable) // Disable CSRF for React APIs
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Explicitly permit pre-flight requests
-                        .anyRequest().permitAll() // Temporarily allow ALL traffic
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .anyRequest().permitAll()
                 );
         return http.build();
     }
@@ -39,16 +36,19 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Exact match instead of wildcard for the dynamic environment variable
-        configuration.setAllowedOrigins(List.of(frontendUrl, "http://localhost:5174")); 
+        String renderEnvOrigin = System.getenv("FRONTEND_URL");
+        if (renderEnvOrigin == null || renderEnvOrigin.isBlank()) {
+            renderEnvOrigin = frontendUrlFallback;
+        }
+
+        // Strip trailing slash if accidentally added in Render dashboard
+        if (renderEnvOrigin.endsWith("/")) {
+            renderEnvOrigin = renderEnvOrigin.substring(0, renderEnvOrigin.length() - 1);
+        }
         
-        // Allow all standard methods including OPTIONS for pre-flight
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        
-        // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
-        
-        // Critical for credentials/tokens
+        configuration.setAllowedOrigins(List.of(renderEnvOrigin)); 
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
